Allow overflow of monthnames to prevent cut-off of swedish chars

--- a/assets/less/calendar.less
+++ b/assets/less/calendar.less
@@ -73,7 +73,7 @@ body {
     }
 }
 
-.calendar .day-names {
+.calendar ol.day-names {
     border-bottom: 1px solid #eee;
     background-color: #555;
     color: white;
@@ -81,7 +81,7 @@ body {
     li {
         text-transform: uppercase;
         margin: .5em 0;
-        overflow: hidden;
+        overflow: visible;
         text-overflow: ellipsis;
     }
 }
